# Hk_platfrom_sdk

./: CMakeLists.txt  Platfrom_Server.cpp  README.md  Sdk_Base.cpp  Sdk_Base_back.cpp  main.cpp
include/: HikPlatformSDK.h  HikPtSDK_define.h  Platfrom_Server.h  Sdk_Base.h
lib/: CrashAPI.lib  HikPlatformSDK.lib  hlog.lib  hpr.lib  libCjson.lib  libevent.lib  libevent_core.lib  libevent_extra.lib
